--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@ body {
     height: 500px;
 }
 
-.form-container h4 {
+.form-container h4,
+h1 {
     font-family: 'Oswald', sans-serif;
     text-align: center;
     color: #301F0D;
